added a OL with 3 Li elemnts and descriptions to them

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <hr />
     <h2>My Hobbies</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Video Games</li>
+        <li>Researching and learning new tech</li>
+        <li>Love spending time with my wife</li>
     </ul>
+    <h2>My Goals for 2025</h2>
+    <ol>
+        <li>Get a job in the tech industry</li>
+        <li>Learn Javascript and react</li>
+        <li>Become more active in the tech community</li>
+    </ol>
 </body>
 </html>
