--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="./images/Chris.jpg" alt="Chris Joiner"/>
     <h1>Chris Joiner</h1>
     <hr />
     <h2>My Hobbies</h2>
